<resources xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="Typos">
    //GameActivity
    <string name="app_name">MatteSpill</string>
    <string name="game_neste"> </string>
    <string name="game_forrige"> </string>
    <string name="dino_spm">Hva er</string>
    <string name="question_mark" translatable="false">?</string>
    <string name="game_1">1</string>
    <string name="game_2">2</string>
    <string name="game_3">3</string>
    <string name="game_4">4</string>
    <string name="game_5">5</string>
    <string name="game_6">6</string>
    <string name="game_7">7</string>
    <string name="game_8">8</string>
    <string name="game_9">9</string>
    <string name="game_0">0</string>
    <string name="game_answer"> </string>
    <string name="svar">Mitt svar er: </string>
    <string name="dialogtekst_score">Kjempe bra! Du klarte: </string>
    <string name="correct">Riktige:</string>

    //Menu
    <string name="menyStats">Statistikk</string>
    <string name="menyStart">Spill</string>
    <string name="menyPref">Preferanser</string>
    <string name="menyLogo">Mattespill</string>


    //Preferences
    <string name="velg5spm">5 spørsmål</string>
    <string name="velg10spm">10 spørsmål</string>
    <string name="velg15spm">15 spørsmål</string>
    <string name="velgAntallSpmTekst">Velg antall spørsmål</string>
    <string name="velgSpråkTekst">Velg språk</string>

    //Stats
    <string name="statsHeader">Statistikk</string>
    <string name="statsTableHeaderGame">Siste spill:</string>
    <string name="statsTableHeaderScore">Poeng totalt:</string>

    <string name="statsTableGameTxt1"> </string>
    <string name="statsTableGameTxt2"> </string>
    <string name="statsTableGameTxt3"> </string>
    <string name="statsTableGameTxt4"> </string>
    <string name="statsTableGameTxt5"> </string>
    <string name="statsTableGameTxt6"> </string>
    <string name="statsTableGameTxt7"> </string>
    <string name="statsTableGameTxt8"> </string>
    <string name="statsTableGameTxt9"> </string>
    <string name="statsTableGameTxt10"> </string>

    <string name="totalScore"> </string>
    <string name="scoreDivider">/</string>
    <string name="totalMaxScore"> </string>

    <string name="statsBtnTxt">Slett all statistikk</string>
    <string name="dialogtekst_stats">Er du sikker på at du vil slette all statisikk?</string>


    //Dialog language
    <string name="dialogtekst">Er du sikker på at du vil endre språk til tysk?</string>
    <string name="ja">Ja</string>
    <string name="nei">Nei</string>
    <string name="backpop">Sikker på at du vil avslutte spillet?</string>
    <string name="duHar"> </string>
    <string name="spmIgjen"> spørsmål igjen!</string>


</resources>