<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameActivity"
    tools:ignore="Typos"
    >

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="265dp"
        android:layout_height="333dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.98">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/button_1"
                android:layout_width="88dp"
                android:layout_height="88dp"
                android:text="@string/game_1" />

            <Button
                android:id="@+id/button_2"
                android:layout_width="88dp"
                android:layout_height="88dp"
                android:text="@string/game_2" />

            <Button
                android:id="@+id/button_3"
                android:layout_width="88dp"
                android:layout_height="88dp"
                android:text="@string/game_3" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="75dp">

            <Button
                android:id="@+id/button_4"
                android:layout_width="88dp"
                android:layout_height="88dp"
                android:text="@string/game_4" />

            <Button
                android:id="@+id/button_5"
                android:layout_width="88dp"
                android:layout_height="88dp"
                android:text="@string/game_5" />

            <Button
                android:id="@+id/button_6"
                android:layout_width="88dp"
                android:layout_height="88dp"
                android:text="@string/game_6" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button_7"
                android:layout_width="88dp"
                android:layout_height="88dp"
                android:text="@string/game_7" />

            <Button
                android:id="@+id/button_8"
                android:layout_width="88dp"
                android:layout_height="88dp"
                android:text="@string/game_8" />

            <Button
                android:id="@+id/button_9"
                android:layout_width="88dp"
                android:layout_height="88dp"
                android:text="@string/game_9" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button_forrige"
                android:layout_width="88dp"
                android:layout_height="68dp"
                android:text="@string/game_forrige" />

            <Button
                android:id="@+id/button_0"
                android:layout_width="88dp"
                android:layout_height="68dp"
                android:text="@string/game_0" />

            <Button
                android:id="@+id/button_neste"
                android:layout_width="88dp"
                android:layout_height="68dp"
                android:text="@string/game_neste" />

        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/spmView"
        android:layout_width="210dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:textSize="30dp"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.24000001" />

    <TextView
        android:id="@+id/svar"
        android:layout_width="53dp"
        android:layout_height="24dp"
        android:text="@string/svar"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.11"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spmView"
        app:layout_constraintVertical_bias="0.52" />

    <TextView
        android:id="@+id/answerView"
        android:layout_width="163dp"
        android:layout_height="29dp"
        android:text="@string/game_answer"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.41"
        app:layout_constraintStart_toEndOf="@+id/svar"
        app:layout_constraintTop_toBottomOf="@+id/spmView" />

</android.support.constraint.ConstraintLayout>