<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#8CC5BF"
    android:fontFamily="casual"
    tools:context=".StatsActivity">

    <TableLayout
        android:id="@+id/statsTable"
        android:layout_width="250dp"
        android:layout_height="135dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.728">

        <TableRow
            android:id="@+id/statsRowGame1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/statsGameTxt1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/statsTableGameTxt1"
                android:textColor="#000000"
                android:textSize="16sp" />
        </TableRow>

        <TableRow
            android:id="@+id/statsRowGame2"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/statsGameTxt2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/statsTableGameTxt2"
                android:textColor="#000000"
                android:textSize="16sp" />
        </TableRow>

        <TableRow
            android:id="@+id/statsRowGame3"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/statsGameTxt3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/statsTableGameTxt3"
                android:textColor="#000000"
                android:textSize="16sp" />
        </TableRow>

        <TableRow
            android:id="@+id/statsRowGame4"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/statsGameTxt4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/statsTableGameTxt4"
                android:textColor="#000000"
                android:textSize="16sp" />
        </TableRow>

        <TableRow
            android:id="@+id/statsRowGame5"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/statsGameTxt5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/statsTableGameTxt5"
                android:textColor="#000000"
                android:textSize="16sp" />
        </TableRow>

    </TableLayout>

    <TextView
        android:id="@+id/statsInfoTxtScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/chewy"
        android:text="@string/statsTableHeaderScore"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/totalScore"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.134"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/statsInfoTxtGame"
        android:layout_width="126dp"
        android:layout_height="32dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/chewy"
        android:text="@string/statsTableHeaderGame"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/statsTable"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.185"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/statsDeleteBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#F16C6C"
        android:onClick="confirmDeleteDialog"
        android:text="@string/statsBtnTxt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/statsTable"
        app:layout_constraintVertical_bias="0.297"
        tools:ignore="OnClick" />

    <TextView
        android:id="@+id/statsHeader"
        android:layout_width="153dp"
        android:layout_height="41dp"
        android:fontFamily="@font/chewy"
        android:text="@string/statsHeader"
        android:textColor="#000000"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/totalScore"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.562"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.254" />

    <TextView
        android:id="@+id/totalScore"
        android:layout_width="191dp"
        android:layout_height="79dp"
        android:layout_marginStart="68dp"
        android:text="@string/totalScore"
        android:textColor="#000000"
        android:textSize="60sp"
        app:layout_constraintBottom_toTopOf="@+id/statsInfoTxtGame"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.912" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="54dp"
        android:layout_height="46dp"
        app:layout_constraintBottom_toTopOf="@+id/statsTable"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.863"
        app:layout_constraintStart_toStartOf="@+id/totalScore"
        app:layout_constraintTop_toBottomOf="@+id/statsInfoTxtScore"
        app:layout_constraintVertical_bias="0.55"
        app:srcCompat="@drawable/medal_stats" />

    <android.support.constraint.Group
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="totalScore" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="66dp"
        android:layout_height="72dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toTopOf="@+id/totalScore"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/group"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/stats_dino256" />

</android.support.constraint.ConstraintLayout>